@@ -1855,6 +1855,11 @@ dnl		AC_CONFIG_HEADERS([config.h])
 dnl        fi,[])
 AC_CONFIG_HEADERS([config.h])
 
+AC_CHECK_PROG([HAVE_TIMEOUT],[timeout],[yes],[no])
+if test x"$ac_cv_prog_HAVE_TIMEOUT" = x"yes"; then
+	AC_MSG_NOTICE(Will use 'timeout --foreground 1' in certain tests.)
+	AC_SUBST(TIMEOUT,"timeout --foreground 1")
+fi
 
 AH_TEMPLATE([FIM_RANDOM])
 AC_DEFINE([FIM_RANDOM])
